; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mps/extr_mps.c_mps_deregister_events.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mps/extr_mps.c_mps_deregister_events.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mps_softc = type { i32 }
%struct.mps_event_handle = type { i32 }

@eh_list = common dso_local global i32 0, align 4
@M_MPT2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mps_deregister_events(%struct.mps_softc* %0, %struct.mps_event_handle* %1) #0 {
  %3 = alloca %struct.mps_softc*, align 8
  %4 = alloca %struct.mps_event_handle*, align 8
  store %struct.mps_softc* %0, %struct.mps_softc** %3, align 8
  store %struct.mps_event_handle* %1, %struct.mps_event_handle** %4, align 8
  %5 = load %struct.mps_softc*, %struct.mps_softc** %3, align 8
  %6 = getelementptr inbounds %struct.mps_softc, %struct.mps_softc* %5, i32 0, i32 0
  %7 = load %struct.mps_event_handle*, %struct.mps_event_handle** %4, align 8
  %8 = load i32, i32* @eh_list, align 4
  %9 = call i32 @TAILQ_REMOVE(i32* %6, %struct.mps_event_handle* %7, i32 %8)
  %10 = load %struct.mps_event_handle*, %struct.mps_event_handle** %4, align 8
  %11 = load i32, i32* @M_MPT2, align 4
  %12 = call i32 @free(%struct.mps_event_handle* %10, i32 %11)
  ret void
}

declare dso_local i32 @TAILQ_REMOVE(i32*, %struct.mps_event_handle*, i32) #1

declare dso_local i32 @free(%struct.mps_event_handle*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
